--- a/frontend/commit-viewer/.prettierrc
+++ b/frontend/commit-viewer/.prettierrc
@@ -1,6 +1,10 @@
 {
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "trailingComma": "es5",
-  "tabWidth": 2
+  "tabWidth": 2,
+  "useTabs": false,
+  "arrowParens": "avoid",
+  "printWidth": 120,
+  "endOfLine": "auto"
 }
