--- a/frontend/commit-viewer/package.json
+++ b/frontend/commit-viewer/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/babel__core": "^7.1.15",
     "@types/enzyme": "3.10.4",
     "@types/jest": "^26.0.0",
     "@types/node": "12.12.26",
-    "@types/react": "17.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-bootstrap": "^0.32.26",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.7",
     "@types/react-router-dom": "5.1.3",
     "@typescript-eslint/eslint-plugin": "4.8.1",
     "@typescript-eslint/parser": "4.8.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "axios": "^0.21.1",
+    "bootstrap": "5.0.2",
     "enzyme": "3.11.0",
     "eslint": "7.11.0",
     "eslint-config-airbnb-typescript": "12.0.0",
@@ -22,15 +27,26 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.0.8",
+    "moment": "^2.29.1",
+    "node-sass": "^5.0.0",
     "prettier": "2.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.3",
     "react-redux": "7.1.3",
+    "react-relay": "^11.0.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "4.0.3",
+    "reduce-reducers": "^1.0.4",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "1.5.4",
+    "redux-observable": "^2.0.0",
+    "redux-persist": "^6.0.0",
+    "relay-runtime": "^11.0.2",
+    "rxjs": "^7.3.0",
+    "typesafe-actions": "^5.1.0",
     "typescript": "~4.2.0"
   },
   "scripts": {
@@ -55,5 +71,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-mock-store": "^1.0.3",
+    "babel-plugin-relay": "^11.0.2",
+    "graphql": "^15.5.1",
+    "relay-compiler": "^11.0.2"
   }
 }
