--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   backend:
     container_name: backend
     build: ./backend
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash-c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./backend:/backend
     ports:
